fix: remove hardcode, update style for stuck Oraibridge box

--- a/src/pages/BalanceNew/Balance.module.scss
+++ b/src/pages/BalanceNew/Balance.module.scss
@@ -30,6 +30,16 @@
       color: #ffffff;
     }
   }
+
+  @include mobile {
+    flex-direction: column;
+    align-items: flex-start;
+
+    .asset {
+      margin-bottom: 15px;
+    }
+  }
+
 }
 
 .action {
